<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/header_drawer_height">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@color/gray"
        android:contentDescription="@string/this_is_image" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/author_email"
        android:layout_marginBottom="@dimen/medium_spacing"
        android:layout_marginStart="@dimen/medium_spacing"
        android:layout_marginEnd="@dimen/medium_spacing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author_name"
        android:layout_marginBottom="@dimen/small_spacing"
        android:layout_marginStart="@dimen/medium_spacing"
        android:layout_marginEnd="@dimen/medium_spacing"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginTop="@dimen/medium_spacing"
        android:layout_marginBottom="@dimen/small_spacing"
        android:layout_marginStart="@dimen/medium_spacing"
        android:layout_marginEnd="@dimen/medium_spacing"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_launcher_background"
        android:contentDescription="@string/this_is_image" />


</androidx.constraintlayout.widget.ConstraintLayout>