<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/small_spacing"
    app:cardCornerRadius="@dimen/medium_spacing"
    app:cardElevation="@dimen/small_spacing">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_full_name_repository"
            style="@style/TextContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_spacing"
            android:layout_marginTop="@dimen/medium_spacing"
            android:layout_marginEnd="@dimen/medium_spacing"
            android:drawablePadding="@dimen/small_spacing"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/author_repository_full_name"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_repository"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name_repository"
            style="@style/TextContentSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_spacing"
            android:text="@string/author_login"
            app:layout_constraintEnd_toEndOf="@+id/tv_full_name_repository"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_full_name_repository"
            app:layout_constraintTop_toBottomOf="@id/tv_full_name_repository" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginStart="@dimen/medium_spacing"
            android:layout_marginTop="@dimen/small_spacing"
            android:layout_marginEnd="@dimen/medium_spacing"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_name_repository" />

        <TextView
            android:id="@+id/tv_description_repository"
            style="@style/TextContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_spacing"
            android:layout_marginTop="@dimen/small_spacing"
            android:layout_marginEnd="@dimen/medium_spacing"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            tools:text="Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_language_repository"
            style="@style/TextContentSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_spacing"
            android:layout_marginBottom="@dimen/small_spacing"
            android:text="@string/dummy_language"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_description_repository"
            app:layout_constraintTop_toBottomOf="@+id/tv_description_repository" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_fork_repository"
            style="@style/TextContentSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_spacing"
            android:layout_marginTop="@dimen/medium_spacing"
            android:layout_marginBottom="@dimen/small_spacing"
            android:text="@string/dummy_number"
            app:chipIcon="@drawable/ic_fork"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/chip_language_repository"
            app:layout_constraintTop_toBottomOf="@+id/tv_description_repository" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_star_repository"
            style="@style/TextContentSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_spacing"
            android:layout_marginTop="@dimen/medium_spacing"
            android:layout_marginBottom="@dimen/small_spacing"
            android:text="@string/dummy_number"
            app:chipIcon="@drawable/ic_star"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@id/chip_fork_repository"
            app:layout_constraintTop_toBottomOf="@+id/tv_description_repository" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>