<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_bar_detail_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.appbar.CollapsingToolbarLayout
        android:id="@+id/collapsing_toolbar_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        app:contentScrim="?attr/colorPrimary"
        app:layout_scrollFlags="scroll|exitUntilCollapsed"
        app:titleEnabled="false">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_collapseMode="parallax">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/backdrop_detail"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/backdrop_animation" />

            <ImageView
                android:id="@+id/iv_user_avatar_detail"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:contentDescription="@string/this_is_image"
                app:layout_constraintBottom_toBottomOf="@id/backdrop_detail"
                app:layout_constraintEnd_toEndOf="@+id/backdrop_detail"
                app:layout_constraintStart_toStartOf="@+id/backdrop_detail"
                app:layout_constraintTop_toTopOf="@+id/backdrop_detail"
                tools:srcCompat="@drawable/img_author" />

            <com.skydoves.androidveil.VeilLayout
                android:id="@+id/veil_information_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/backdrop_detail"
                app:veilLayout_radius="@dimen/small_spacing">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tv_user_name_detail"
                        style="@style/TextTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/medium_spacing"
                        android:layout_marginTop="@dimen/medium_spacing"
                        android:layout_marginEnd="@dimen/medium_spacing"
                        android:text="@string/author_name"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_user_login_detail"
                        style="@style/TextContentSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/small_spacing"
                        android:drawablePadding="@dimen/small_spacing"
                        android:gravity="center"
                        android:text="@string/author_login"
                        android:textColor="@color/white"
                        app:drawableStartCompat="@drawable/ic_verified"
                        app:layout_constraintEnd_toEndOf="@id/tv_user_name_detail"
                        app:layout_constraintStart_toStartOf="@id/tv_user_name_detail"
                        app:layout_constraintTop_toBottomOf="@id/tv_user_name_detail" />

                    <TextView
                        android:id="@+id/tv_user_location_detail"
                        style="@style/TextContentSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/small_spacing"
                        android:gravity="center"
                        android:text="@string/author_location"
                        android:textColor="@color/white"
                        app:drawableStartCompat="@drawable/ic_location"
                        app:layout_constraintEnd_toEndOf="@+id/tv_user_login_detail"
                        app:layout_constraintStart_toStartOf="@+id/tv_user_login_detail"
                        app:layout_constraintTop_toBottomOf="@+id/tv_user_login_detail" />

                    <TextView
                        android:id="@+id/tv_user_company_detail"
                        style="@style/TextContentSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/small_spacing"
                        android:gravity="center"
                        android:text="@string/author_company"
                        android:textColor="@color/white"
                        app:drawableStartCompat="@drawable/ic_company"
                        app:layout_constraintEnd_toEndOf="@id/tv_user_location_detail"
                        app:layout_constraintStart_toStartOf="@id/tv_user_location_detail"
                        app:layout_constraintTop_toBottomOf="@id/tv_user_location_detail" />

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_marginStart="@dimen/large_spacing"
                        android:layout_marginTop="@dimen/small_spacing"
                        android:layout_marginEnd="@dimen/large_spacing"
                        android:layout_marginBottom="@dimen/small_spacing"
                        app:cardCornerRadius="@dimen/medium_spacing"
                        app:cardElevation="@dimen/small_spacing"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_user_company_detail">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.5"
                            app:layout_constraintStart_toStartOf="parent">

                            <TextView
                                android:id="@+id/textView6"
                                style="@style/TextContent"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/small_spacing"
                                android:text="@string/repositories"
                                app:layout_constraintEnd_toStartOf="@+id/divider"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/tv_user_repositories_detail"
                                style="@style/TextContentSmall"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/dummy_number"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toStartOf="@id/divider"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@id/textView6" />

                            <View
                                android:id="@+id/divider"
                                android:layout_width="2dp"
                                android:layout_height="match_parent"
                                android:layout_marginTop="@dimen/small_spacing"
                                android:layout_marginBottom="@dimen/small_spacing"
                                android:background="?android:attr/listDivider"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toStartOf="@+id/divider2"
                                app:layout_constraintHorizontal_bias="0.5"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <View
                                android:id="@+id/divider2"
                                android:layout_width="2dp"
                                android:layout_height="match_parent"
                                android:layout_marginTop="@dimen/small_spacing"
                                android:layout_marginBottom="@dimen/small_spacing"
                                android:background="?android:attr/listDivider"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.5"
                                app:layout_constraintStart_toEndOf="@+id/divider"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/textView8"
                                style="@style/TextContent"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/small_spacing"
                                android:text="@string/following"
                                app:layout_constraintEnd_toStartOf="@+id/divider2"
                                app:layout_constraintStart_toEndOf="@+id/divider"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/tv_user_following_detail"
                                style="@style/TextContentSmall"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/dummy_number"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toStartOf="@id/divider2"
                                app:layout_constraintStart_toEndOf="@id/divider"
                                app:layout_constraintTop_toBottomOf="@id/textView8" />

                            <TextView
                                android:id="@+id/textView9"
                                style="@style/TextContent"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/small_spacing"
                                android:text="@string/follower"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toEndOf="@+id/divider2"
                                app:layout_constraintTop_toTopOf="parent" />

                            <TextView
                                android:id="@+id/tv_user_follower_detail"
                                style="@style/TextContentSmall"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/dummy_number"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toEndOf="@id/divider2"
                                app:layout_constraintTop_toBottomOf="@id/textView9" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </com.google.android.material.card.MaterialCardView>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.skydoves.androidveil.VeilLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_detail"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_collapseMode="pin" />

    </com.google.android.material.appbar.CollapsingToolbarLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout_detail"
        style="@style/TextContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="SpeakableTextPresentCheck" />

</com.google.android.material.appbar.AppBarLayout>